tests/NormalTests/paczka1/fuzzy1/77703164.err
Error in line 3: vwDWNDbFdmX S206 69,2
Error in line 9: S206 S427 81,2
Error in line 15: S206 S206 67,4
Error in line 25: vwDWNDbFdmX S844 217,	
Error in line 24: vwDWNDbFdmX S844 46,7
Error in line 21: sXUqg1 S206 22,7
Error in line 10: WXq1ELtuZ4V S844 6,4
